--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	  			height: 100%;
 	  			width: 100%;
 				background-color: yellow;
-				background: linear-gradient(to bottom, yellow 0%, yellow 50%, blue 50%, blue 100%);
-				background: -webkit-linear-gradient(top, yellow 0%, yellow 50%, blue 50%, blue 100%);
-				background: -moz-linear-gradient(top, yellow 0%, yellow 50%, blue 50%, blue 100%);
-				background: -o-linear-gradient(top, yellow 0%, yellow 50%, blue 50%, blue 100%);
-				background: -ms-linear-gradient(top, yellow 0%, yellow 50%, blue 50%, blue 100%);
+				background: linear-gradient(to bottom, blue 0%, blue 50%, yellow 50%, yellow 100%);
+				background: -webkit-linear-gradient(top, blue 0%, blue 50%, yelliw 50%, yellow 100%);
+				background: -moz-linear-gradient(top, blue 0%, blue 50%, yellow 50%, yellow 100%);
+				background: -o-linear-gradient(top, blue 0%, blue 50%, yellow 50%, yellow 100%);
+				background: -ms-linear-gradient(top, blue 0%, blue 50%, yellow 50%, yellow 100%);
 			}
 			div {
 				position: absolute;
